add: personality_type
