# internal/handler/dto/test_answers.go
@@ -1,6 +1,9 @@
 package dto
 
-import "time"
+import (
+	"dating-app/internal/model"
+	"time"
+)
 
 type SubmitTestAnswersRequest struct {
 	Answers []TestAnswerRequest `json:"answers"`
@@ -12,8 +15,19 @@ type TestAnswerRequest struct {
 }
 
 type SubmitTestAnswersResponse struct {
-	ResultID    string    `json:"result_id"`
-	TestID      string    `json:"test_id"`
-	Revision    int       `json:"revision"`
-	CompletedAt time.Time `json:"completed_at"`
+	ResultID             string                `json:"result_id"`
+	TestID               string                `json:"test_id"`
+	Revision             int                   `json:"revision"`
+	CompletedAt          time.Time             `json:"completed_at"`
+	BigFive              TestBigFive           `json:"big_five"`
+	PersonalityType      model.PersonalityType `json:"personality_type"`
+	AboutPersonalityType string                `json:"about_personality_type"`
+}
+
+type TestBigFive struct {
+	Openness          *float64 `json:"openness"`
+	Conscientiousness *float64 `json:"conscientiousness"`
+	Extraversion      *float64 `json:"extraversion"`
+	Agreeableness     *float64 `json:"agreeableness"`
+	Neuroticism       *float64 `json:"neuroticism"`
 }
